feat(all): main galvanize implementation
